--- a/app/templates/Result/overview.latte
+++ b/app/templates/Result/overview.latte
@@ -15,11 +15,17 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
-                    <div class="ibox-title modified">
-        				<input id="week_from_input" class="form-control week-input" onkeydown="return false"/>
-                        <input id="week_to_input" class="form-control week-input" onkeydown="return false"/>
+                    <div class="ibox-title modified" style="overflow:auto;">
+                        <div class="week-input-container"">
+                            <label class="control-label tiny-label" for="week_from_input">od</label>
+            				<input id="week_from_input" class="form-control week-input" onkeydown="return false"/>
+                        </div>
+                        <div class="week-input-container">
+                            <label class="control-label tiny-label" for="week_to_input">do</label>
+                            <input id="week_to_input" class="form-control week-input" onkeydown="return false"/>
+                        </div>
                     </div>
-                    <div class="ibox-content relative" n:snippet="resultsTable">
+                    <div class="ibox-content relative" n:snippet="overviewTable">
                         <div id="fountainG" class="ajax-loading">
                             <div id="fountainG_1" class="fountainG"></div>
                             <div id="fountainG_2" class="fountainG"></div>
@@ -30,19 +36,18 @@
                             <div id="fountainG_7" class="fountainG"></div>
                             <div id="fountainG_8" class="fountainG"></div>
                         </div>
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny" id="resultsTable" data-page-size="20" >
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
                             <thead>
-                                {block resultTable_head}
                                 <tr>
                                     <th class="wide noselect">Jméno</th>
-                                    <th class="noselect" data-type="numeric">Mahá</th>
-                                    <th class="noselect" data-type="numeric">Big</th>
-                                    <th class="noselect" data-type="numeric">Medium</th>
-                                    <th class="noselect" data-type="numeric">Small</th>
-                                    <th class="noselect" data-type="numeric">Body</th>
+                                    <th class="noselect numeric" data-type="numeric">Mahá</th>
+                                    <th class="noselect numeric" data-type="numeric">Big</th>
+                                    <th class="noselect numeric" data-type="numeric">Medium</th>
+                                    <th class="noselect numeric" data-type="numeric">Small</th>
+                                    <th class="noselect numeric" data-type="numeric">Mag</th>
+                                    <th class="noselect numeric" data-type="numeric">Body</th>
                                     <th data-hide="all"></th>
                                 </tr>
-                                {/block}
                             </thead>
                             <tbody>
                                 <tr n:foreach="$persons as $person" id="person-{$person->id}">
@@ -52,52 +57,50 @@
                                     <td data-category="big">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
                                     <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
                                     <td data-category="small">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
+                                    <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
                                     <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
                                     <td style="display: none">
-                                    {form personResultsForm-$person->id}
-                                        <table class="result-inputs">
+                                        <table class="result-detail">
                                         {foreach $books as $book}
                                             {if $book->category->title == "Mahá"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
+                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
                                             {/if}
                                         {/foreach}
                                         </table>
-                                        <table class="result-inputs">
+                                        <table class="result-detail">
                                         {foreach $books as $book}
                                             {if $book->category->title == "Big"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
+                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
                                             {/if}
                                         {/foreach}
                                         </table>
-                                        <table class="result-inputs">
+                                        <table class="result-detail">
                                         {foreach $books as $book}
                                             {if $book->category->title == "Medium"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
+                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
                                             {/if}
                                         {/foreach}
                                         </table>
-                                        <table class="result-inputs">
+                                        <table class="result-detail">
                                         {foreach $books as $book}
                                             {if $book->category->title == "Small"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
+                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
                                             {/if}
                                         {/foreach}
                                         </table>
-                                        <table class="result-inputs">
+                                        <table class="result-detail">
                                         {foreach $books as $book}
                                             {if $book->category->title == "Mag"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
+                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
                                             {/if}
                                         {/foreach}
                                         </table>
-                                        {input person_id}{input save, class => "btn btn-primary submit"}
-                                    {/form}
                                     </td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td colspan="6">
+                                    <td colspan="7">
                                         <ul class="pagination pull-right"></ul>
                                     </td>
                                 </tr>
@@ -127,7 +130,7 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
-            $('#resultsTable').footable();
+            $('#overviewTable').footable();
 
             var weekIntervalPicker = function(input_from, input_to) {
                 var week_from, 
@@ -140,7 +143,7 @@
                 var self = this;
 
                 this.setFrom = function(year, week_number) {
-                    $(input_from).val("Rok " + year + " - Týden " + week_number);
+                    $(input_from).val("Rok " + year + " - týden " + week_number);
                     year_from = year;
                     week_from = week_number;
 
@@ -151,7 +154,7 @@
                 }
                 
                 this.setTo = function(year, week_number) {
-                    $(input_to).val("Rok " + year + " - Týden " + week_number);
+                    $(input_to).val("Rok " + year + " - týden " + week_number);
                     year_to = year;
                     week_to = week_number;
 
@@ -224,8 +227,29 @@
                                 self.setTo(year, week_number);
                             }
 
-                            console.log("From: " + year_from + " " + week_from);
-                            console.log("To: " + year_to + " " + week_to);
+                            $('#overviewTable').fadeTo(500, 0, function(){
+                               $(this).css("visibility", "hidden");   
+                            });
+
+                            $('#fountainG').fadeIn();
+                            $(input_from).prop('disabled', true);
+                            $(input_to).prop('disabled', true);
+
+                            $.get({link overview}, {"week_from": week_from, 
+                                                    "year_from": year_from,
+                                                    "week_to": week_to, 
+                                                    "year_to": year_to,
+                                              }, 
+                                function(payload) {
+                                    $.nette.success(payload);
+                                    $('#overviewTable').footable();
+                                    $('#overviewTable').hide();
+                                    $('#overviewTable').fadeIn();
+                                    $('#fountainG').fadeOut();
+                                    $(input_from).prop('disabled', false);
+                                    $(input_to).prop('disabled', false);
+                                    changeUrl("?week_from=" + week_from + "&year_from=" + year_from + "&week_to=" + week_to + "&year_to=" + year_to);
+                                });
                         }
                     });
                 }
@@ -240,9 +264,8 @@
             }
 
             var picker = new weekIntervalPicker('#week_from_input', '#week_to_input');
-            picker.setFrom({$year}, {$week_number});
-            picker.setTo({$year}, {$week_number});
-
+            picker.setFrom({$year_from}, {$week_from});
+            picker.setTo({$year_to}, {$week_to});
         });
     </script>
 {/block}
