--- a/www/less/forms.less
+++ b/www/less/forms.less
@@ -17,6 +17,18 @@
 
 label.error {
 	margin-bottom: 0px;
+}
+
+.week-input-container {
+	width: 280px; 
+	float: left;
+}
+
+label.tiny-label {
+	width: 41px;
+	margin-top: 5px;
+	margin-left: 10px;
+	float: left;
 } 
 
 .i-checks {
