--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -204,7 +204,7 @@
             }
 
             function setWeekPicker(input, year, week_number) {
-                $(input).val("Rok " + year + " - týden " + week_number);
+                $(input).val("Rok " + year + ": týden " + week_number);
             }
 
             bindWeekPicker('#week_from_input');
