--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -32,6 +32,16 @@ ol.breadcrumb li.active {
 		th.wide {
 			 width: 50%;
 		}
+
+		th.thin {
+			width: 10px;
+		}
+	}
+
+	tbody {
+		td.center {
+			text-align: center;
+		}
 	}
 }
 
