--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,13 @@ ol.breadcrumb li.active {
 .footable tfood th.wide {
   width: 50%;
 }
+.footable thead th.thin,
+.footable tfood th.thin {
+  width: 10px;
+}
+.footable tbody td.center {
+  text-align: center;
+}
 .main-ajax-spinner {
   opacity: 0;
   top: 5px;
@@ -358,4 +365,7 @@ label.tiny-label {
 }
 .score-table .result-detail label {
   margin: 0;
+}
+.print-button {
+  margin-bottom: 0 !important;
 }
