--- a/www/less/score-table-printview.less
+++ b/www/less/score-table-printview.less
@@ -1,3 +1,26 @@
-.score-table-printview {
-    
+.score-tableprint {
+    width: 100%;
+    background-color: #FFFFFF;
+    border: 1px #7D7D7D solid;
+
+    caption {
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    thead {
+        border-bottom: 1px #7D7D7D solid;
+    }
+
+    tbody {
+        tr {
+            border-bottom: 1px #7D7D7D dotted;
+        }
+    }
+
+    th, td {
+        text-align: center;
+    }
+
+
 }
