--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -51,13 +51,13 @@
                             <thead>
                                 {block resultTable_head}
                                 <tr>
-                                    <th class="wide noselect">Jméno</th>
+                                    <th class="noselect" style="width: 50%"s>Jméno</th>
                                     <th class="noselect" data-type="numeric">Mahá</th>
                                     <th class="noselect" data-type="numeric">Big</th>
                                     <th class="noselect" data-type="numeric">Medium</th>
                                     <th class="noselect" data-type="numeric">Small</th>
                                     <th class="noselect" data-type="numeric">Mag</th>
-                                    <th class="noselect" data-type="numeric">Body</th>
+                                    <th class="noselect" data-type="numeric" data-sort-initial="descending">Body</th>
                                     <th data-hide="all"></th>
                                 </tr>
                                 {/block}
