--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,7 +20,7 @@ ol.breadcrumb li.active {
 }
 .footable thead th.wide,
 .footable tfood th.wide {
-  width: 50%;
+  width: 30%;
 }
 .footable thead th.thin,
 .footable tfood th.thin {
@@ -28,6 +28,14 @@ ol.breadcrumb li.active {
 }
 .footable tbody td.center {
   text-align: center;
+}
+.footable tbody td.left {
+  text-align: left;
+  padding-left: 10px;
+}
+.footable tbody td.right {
+  text-align: right;
+  padding-right: 10px;
 }
 .main-ajax-spinner {
   opacity: 0;
@@ -61,6 +69,9 @@ ol.breadcrumb li.active {
 }
 .table td.controls a:not(:last-child) {
   margin-right: 3px;
+}
+.modal-lg {
+  width: 1000px;
 }
 #fountainG {
   position: absolute;
@@ -368,4 +379,23 @@ label.tiny-label {
 }
 .print-button {
   margin-bottom: 0 !important;
+}
+.score-tableprint {
+  width: 100%;
+  background-color: #FFFFFF;
+  border: 1px #7D7D7D solid;
+}
+.score-tableprint caption {
+  font-size: 18px;
+  font-weight: bold;
+}
+.score-tableprint thead {
+  border-bottom: 1px #7D7D7D solid;
+}
+.score-tableprint tbody tr {
+  border-bottom: 1px #7D7D7D dotted;
+}
+.score-tableprint th,
+.score-tableprint td {
+  text-align: center;
 }
