--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -30,7 +30,7 @@ ol.breadcrumb li.active {
 .footable {
 	thead, tfood {
 		th.wide {
-			 width: 50%;
+			 width: 30%;
 		}
 
 		th.thin {
@@ -41,6 +41,16 @@ ol.breadcrumb li.active {
 	tbody {
 		td.center {
 			text-align: center;
+		}
+
+		td.left {
+			text-align: left;
+			padding-left: 10px;
+		}
+
+		td.right {
+			text-align: right;
+			padding-right: 10px;
 		}
 	}
 }
@@ -89,6 +99,9 @@ ol.breadcrumb li.active {
 	}
 }
 
+.modal-lg {
+	width: 1000px;
+}
 
 #fountainG{
 	position:absolute;
