--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -30,7 +30,11 @@ ol.breadcrumb li.active {
 .footable {
 	thead, tfood {
 		th.wide {
-			 width: 30%;
+			width: 30%;
+		}
+
+		th.medium {
+			width: 90px;
 		}
 
 		th.thin {
@@ -92,6 +96,7 @@ ol.breadcrumb li.active {
 	td.controls {
 		a {
 			float: left;
+			color: #2F4050;
 			&:not(:last-child) {
 				margin-right: 3px;
 			}
