--- a/www/less/result.less
+++ b/www/less/result.less
@@ -54,6 +54,12 @@
 	}
 }
 
+.footable {
+	.footable-row-detail-cell:hover {
+		background-color: #FFFFFF;
+	}
+}
+
 .score-table {
 	th.numeric {
 		width: 8.33%;
