--- a/app/templates/Result/overview.latte
+++ b/app/templates/Result/overview.latte
@@ -17,7 +17,7 @@
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title modified" style="overflow:auto;">
-                        <div class="week-input-container"">
+                        <div class="week-input-container">
                             <label class="control-label tiny-label" for="week_from_input">od</label>
             				<input id="week_from_input" class="form-control week-input" onkeydown="return false"/>
                         </div>
@@ -26,7 +26,7 @@
                             <input id="week_to_input" class="form-control week-input" onkeydown="return false"/>
                         </div>
                     </div>
-                    {snippet overviewTable}
+                    
                     <div class="ibox-content relative">
                         <div id="fountainG" class="ajax-loading">
                             <div id="fountainG_1" class="fountainG"></div>
@@ -38,6 +38,7 @@
                             <div id="fountainG_7" class="fountainG"></div>
                             <div id="fountainG_8" class="fountainG"></div>
                         </div>
+                        {snippet overviewTable}
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
                             <thead>
                                 <tr>
@@ -113,6 +114,7 @@
                                 </tr>
                             </tfoot>
                         </table>
+                        {/snippet}
                         <div class="modal inmodal fade" id="result_list" tabindex="-1" role="dialog" aria-hidden="true">
                             <div class="modal-dialog modal-lg">
                                 <div class="modal-content">
@@ -121,6 +123,7 @@
                                         <h4 class="modal-title">Výsledky {$score_title}</h4>
                                     </div>
                                     <div class="modal-body">
+	                                    {snippet printTable}
                                         <table class="score-tableprint footable">
                                             <caption>Knihy</caption>
                                             <thead>
@@ -138,6 +141,7 @@
                                                     <th data-type="numeric" data-sort-initial="descending">Body</th>
                                                 </tr>
                                             </thead>
+                                            
                                             <tbody>
                                                 <tr n:foreach="$persons as $person" n:if="isset($book_points[$person->id])">
                                                     {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
@@ -154,7 +158,9 @@
                                                     <td>{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
                                                 </tr>
                                             </tbody>
+                                            
                                         </table>
+                                        {/snippet}
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-white" data-dismiss="modal">Zavřít</button>
@@ -164,7 +170,7 @@
                             </div>
                         </div>
                     </div>
-                    {/snippet}
+                    
                 </div>
             </div>
         </div>
