--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -45,7 +45,8 @@
 	                    <a n:href="setter"><i class="fa fa-th-large"></i><span class="nav-label">Výsledky</span><span class="fa arrow"></span></a>
 	                    <ul class="nav nav-second-level collapse">
 	                        <li n:class="$presenter->isLinkCurrent('Result:setter') ? active"><a n:href="Result:setter, $this_week, $this_year">Zadávání</a></li>
-	                        <li n:class="$presenter->isLinkCurrent('Result:overview') ? active"><a n:href="Result:overview, $this_week, $this_year, $this_week, $this_year">Přehled</a></li>
+	                        <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $this_week, $this_year, $this_week, $this_year">Osoby</a></li>
+                            <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $this_week, $this_year, $this_week, $this_year">Knihy</a></li>
 	                    </ul>
 	                </li>
 	                <li n:class="$presenter->isLinkCurrent('Person:*') ? active">
