--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -108,6 +108,35 @@ ol.breadcrumb li.active {
 	width: 1000px;
 }
 
+
+.panel-body {
+	.panel-heading {
+		padding: 0;
+	}
+
+	.panel-title {
+		margin-top: 0;
+		padding-top: 5px;
+		font-weight: normal;
+
+		a {
+			display: block;
+			width: 100%;
+			padding: 5px 15px 10px;
+		}
+	}
+	
+	.panel-group {
+		margin-bottom: 0;
+	}
+
+	.panel-filler {
+		line-height: 0px; 
+		margin-top: -10px; 
+		visibility: hidden;
+	}
+}
+
 #fountainG{
 	position:absolute;
 	top: 40%;
