--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -67,41 +67,45 @@
                                     <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
                                     <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
                                     <td style="display: none">
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Mahá"}
-                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Big"}
-                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Medium"}
-                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Small"}
-                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Mag"}
-                                            <tr><th>{$book->title}</th><td>{isset($book_distribution[$person->id][$book->id]) ? $book_distribution[$person->id][$book->id] : "0"}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
+                                    {form personResultsForm-$person->id}
+                                        <div class="panel-body">
+                                            <div class="panel-group" id="accordion-{$person->id}">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <h5 class="panel-title">
+                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id}" href="#collapseOne-{$person->id}">Hlavní knihy</a>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseOne-{$person->id}" class="panel-collapse collapse in">
+                                                        <div class="panel-body">
+                                                            {foreach $primary_books as $book}
+                                                            <table class="result-detail">
+                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
+                                                            </table>
+                                                            {/foreach}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <h5 class="panel-title">
+                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id} " href="#collapseTwo-{$person->id}">Vedlejší knihy</a>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseTwo-{$person->id}" class="panel-collapse collapse">
+                                                        <div class="panel-body">
+                                                            {foreach $secondary_books as $book}
+                                                            <table class="result-detail">
+                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
+                                                            </table>
+                                                            {/foreach}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
+                                    {/form}
                                     </td>
                                 </tr>
                             </tbody>
@@ -158,7 +162,6 @@
                                                     <td>{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
                                                 </tr>
                                             </tbody>
-                                            
                                         </table>
                                         {/snippet}
                                     </div>
@@ -283,7 +286,6 @@
                     .keyup(function() { // při kliknutí na input se zvýrazní vybraný týden
                         redrawActiveWeek();
                     });
-
 
                     $(input).on('change', function (e) { // při změně týdne ze změní zvýrazněný
                         var value = $(input).val();
