--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -49,7 +49,6 @@
                         </div>
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="resultsTable" data-page-size="20" >
                             <thead>
-                                {block resultTable_head}
                                 <tr>
                                     <th class="noselect" style="width: 50%">Jméno</th>
                                     <th class="noselect" data-type="numeric">Mahá</th>
@@ -60,7 +59,6 @@
                                     <th class="noselect" data-type="numeric" data-sort-initial="descending">Body</th>
                                     <th data-hide="all"></th>
                                 </tr>
-                                {/block}
                             </thead>
                             <tbody>
                                 <tr n:foreach="$persons as $person" id="person-{$person->id}">
@@ -73,82 +71,44 @@
                                     <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
                                     <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
                                     <td style="display: none">
-                                                <div class="panel-body">
-                                                    <div class="panel-group" id="accordion">
-                                                        <div class="panel panel-default">
-                                                            <div class="panel-heading">
-                                                                <h5 class="panel-title">
-                                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Collapsible Group Item #1</a>
-                                                                </h5>
-                                                            </div>
-                                                            <div id="collapseOne" class="panel-collapse collapse in">
-                                                                <div class="panel-body">
-                                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="panel panel-default">
-                                                            <div class="panel-heading">
-                                                                <h4 class="panel-title">
-                                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Collapsible Group Item #2</a>
-                                                                </h4>
-                                                            </div>
-                                                            <div id="collapseTwo" class="panel-collapse collapse">
-                                                                <div class="panel-body">
-                                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <div class="panel panel-default">
-                                                            <div class="panel-heading">
-                                                                <h4 class="panel-title">
-                                                                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Collapsible Group Item #3</a>
-                                                                </h4>
-                                                            </div>
-                                                            <div id="collapseThree" class="panel-collapse collapse">
-                                                                <div class="panel-body">
-                                                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                                                </div>
-                                                            </div>
+                                    {form personResultsForm-$person->id}
+                                        <div class="panel-body">
+                                            <div class="panel-group" id="accordion-{$person->id}">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <h5 class="panel-title">
+                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id}" href="#collapseOne-{$person->id}">Hlavní knihy</a>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseOne-{$person->id}" class="panel-collapse collapse in">
+                                                        <div class="panel-body">
+                                                            {foreach $primary_books as $book}
+                                                            <table class="result-detail">
+                                                                <tr><th>{label results-$book->book_id /}</th><td>{input results-$book->book_id}</td></tr>
+                                                            </table>
+                                                            {/foreach}
                                                         </div>
                                                     </div>
                                                 </div>
-                                    {form personResultsForm-$person->id}
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Mahá"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Big"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Medium"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Small"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
-                                        <table class="result-detail">
-                                        {foreach $books as $book}
-                                            {if $book->category->title == "Mag"}
-                                            <tr><th>{label results-$book->id /}</th><td>{input results-$book->id}</td></tr>
-                                            {/if}
-                                        {/foreach}
-                                        </table>
+                                                <div class="panel panel-default">
+                                                    <div class="panel-heading">
+                                                        <h5 class="panel-title">
+                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id} " href="#collapseTwo-{$person->id}">Vedlejší knihy</a>
+                                                        </h5>
+                                                    </div>
+                                                    <div id="collapseTwo-{$person->id}" class="panel-collapse collapse">
+                                                        <div class="panel-body">
+                                                            {foreach $secondary_books as $book}
+                                                            <table class="result-detail">
+                                                                <tr><th>{label results-$book->book_id /}</th><td>{input results-$book->book_id}</td></tr>
+                                                            </table>
+                                                            {/foreach}
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                                        </div>
                                         {input person_id}{input save, class => "btn btn-primary submit"}
                                     {/form}
                                     </td>
@@ -186,6 +146,26 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
+            var selected_week_number;
+
+            function redrawActiveWeek() {
+                var active_tr = $(".datepicker-dropdown table td.cw").filter(function() { // najdeme řádek obsahující číslo vybraného týdne
+                    return $(this).text() === selected_week_number;
+                }).parent();
+
+                active_tr.find('td.active').removeClass('active');
+                active_tr.addClass('active');
+                
+                // odstranění hover efektu nad neaktivnímy týdny
+                active_tr = $(".datepicker-dropdown table tbody tr").each(function() {
+                    var cells = $(this).find('td.disabled');
+                    if(cells.length > 0) {
+                        var first_cell = $(this).find('td:first-child');
+                        first_cell.addClass('disabled');
+                    }
+                });
+            }
+
             // ajaxová obsluha inputu pro výběr týdne
             function bindWeekPicker(input) {
                 $(input).datepicker({
@@ -197,13 +177,13 @@
                     format: 'yyyy-mm-dd',
                     language: 'cs',
                 })
-                .click(function() { // při prvním kliknutím na input se zvýrazní vybraný týden
-                    active_tr = $(".datepicker-dropdown table tr.active");
-                    if(Object.keys(active_tr).length == 4) { // je už něco označené?
-                        var active_tr = $(".datepicker-dropdown table td.cw:contains(" + QueryString.week + ")").parent();
-                        active_tr.find('td.active').removeClass('active');
-                        active_tr.addClass('active');
-                    }
+                .click(function() { // při kliknutí na input se zvýrazní vybraný týden
+                    console.log(selected_week_number);
+                    redrawActiveWeek();
+                })
+
+                .keyup(function() { // při kliknutí na input se zvýrazní vybraný týden
+                    redrawActiveWeek();
                 });
                 
                 $(input).on('change', function (e) { // při změně týdne ze změní zvýrazněný
@@ -211,7 +191,7 @@
                     var only_int_value = value.replace(/-/g, '');
 
                     if(!isNaN(only_int_value)) {
-                        date = new Date()
+                        date = new Date();
                         if(value == "") {
                             value = date.nowMySQLdate();
                         }
@@ -220,6 +200,7 @@
                         active_tr.addClass('active');
                                             
                         var week_number = date.getWeek(value);
+                        selected_week_number = week_number;
                         var year = value.substring(0, 4);
                         setWeekPicker(input, year, week_number);
                         
@@ -245,11 +226,16 @@
 
             function setWeekPicker(input, year, week_number) {
                 $(input).val("Rok " + year + ": týden " + week_number);
+                selected_week_number = week_number;
             }
 
             bindWeekPicker('#week_from_input');
             setWeekPicker('#week_from_input', {$year}, {$week});
-
+            
+            // zvýraznění týdne při přeskakování na další a předchozí stránky datepickeru
+            $('body').on('click', '.datepicker-dropdown th.prev, .datepicker-dropdown th.next', function(){
+                redrawActiveWeek();
+            });
             
             $('#resultsTable').footable();
             
