--- a/www/less/result.less
+++ b/www/less/result.less
@@ -72,10 +72,7 @@
 	.footable-row-detail-cell {
 		.submit {
 			width: 200px;
-			margin-left: 10px;
-			margin-top: 15px;
-			clear: both;
-			float: left;
+			margin-left: 15px;
 		}
 
 		.disabled {
@@ -90,20 +87,41 @@
 
 	.result-detail {
 		float: left;
-		margin: 0 50px 20px 10px;
+		margin: 0 20px 0px 15px;
 
 		tr {
 			height: 30px;
 
 			th {
-				padding-right: 25px;
+				width: 250px;
+				font-weight: normal;
+				overflow: hidden; 
+				text-overflow: ellipsis; 
+				white-space: nowrap;
+				padding-right: 15px;
+				display: block;
+				float: left;
+				
+				label {
+					width: 250px;
+					font-weight: normal;
+					overflow: hidden; 
+					text-overflow: ellipsis; 
+					white-space: nowrap;
+					margin-top: 5px;
+				}
+			}
+
+			td {
+				display: block;
+				float: left;
 			}
 		}
 
 		input.number {
 			width: 100px;
 			height: 27px;
-			margin: 2px 0 0 15px;
+			margin: 2px 0 0 0;
 			padding: 3px 3px 3px 8px;
 		}
 
